# ansi-parser

./: .gitignore  Cargo.toml  README.md
bench/: README.md
bench/mapping/: run-create-mapping.sh  run-with-mapping.sh  run-without-mapping.sh
bench/raw-parse/: run-split.sh  run-without-split.sh
bench/split/: run-split.sh  run-without-split.sh
benches/: mod.rs  parse_file_throughput.rs  parse_raw_ansi.rs  perf.rs
run_lib/: Cargo.toml
run_lib/src/: cli.rs  main.rs
run_lib/src/cli/: definition.rs  mapping_file_command.rs  parse_command.rs  parse_in_memory_command.rs
scripts/: build-without-warnings.sh
src/: cli.rs  files.rs  format.rs  iterators.rs  lib.rs  main.rs  mapping_file.rs  output.rs  parse_ansi_text.rs  parse_file.rs  prev_main.rs  streams_helpers.rs  test_utils.rs  traits.rs  types.rs
src/cli/: definition.rs  format.rs  mapping_file_command.rs  parse_command.rs  parse_temp.rs
src/cli/format/: flat_json_line_span_lines.rs  json_line_single_span.rs  json_line_span_lines.rs  json_single_span.rs  json_span_lines.rs  lines_formatters.rs  spans_formatters.rs
src/cli/format/lines_formatters/: flat_json_line_formatter.rs  json_formatter.rs  single_item_json_formatter.rs
src/files/: file_reader.rs  file_size.rs  iterators.rs  streams.rs
src/format/: lines_formatters.rs  spans_formatters.rs
src/format/lines_formatters/: flat_json_line_formatter.rs  json_formatter.rs  lines_formats.rs  single_item_json_formatter.rs
src/format/spans_formatters/: json_formatter.rs  single_item_json_formatter.rs  spans_formats.rs
src/iterators/: compose.rs  file_iterator_helpers.rs  split_to_lines.rs
src/mapping_file/: constants.rs  create.rs  read.rs  tests.rs
src/my_iterators_helpers/: split_to_lines.rs
src/parse_ansi_text/: ansi.rs  ansi_output_to_spans.rs  ansi_parse_iterator_to_span_iterator.rs  ansi_sequence_helpers.rs  ansi_text_to_output.rs  ansi_to_span.rs  colors.rs  custom_ansi_parse_iterator.rs  iterators.rs  parse_ansi_as_spans_iterator.rs  parse_ansi_split_by_lines_as_spans_iterator.rs  parse_options.rs  parse_text_matching_single_span.rs  playground_iterator.rs  raw_ansi_parse.rs  span.rs  split_spans_to_lines.rs  style.rs  tests.rs  types.rs
src/parse_ansi_text/ansi/: ansi_sequence_helpers.rs  colors.rs  constants.rs  enums.rs  parsers.rs  style.rs  types.rs
src/parse_ansi_text/ansi_output_to_spans/: parse_ansi_as_line_of_spans.rs  parse_ansi_as_spans.rs  parse_ansi_split_by_lines_as_spans.rs
src/parse_ansi_text/ansi_text_to_output/: helpers.rs  parse.rs  str_part_parse.rs  stream_helpers.rs  stream_parse.rs
src/parse_ansi_text/ansi_to_span/: iterator_parse.rs  stream_parse.rs
src/parse_ansi_text/iterators/: custom_ansi_parse_iterator.rs  file_iterator_helpers.rs  parse_ansi_as_spans_iterator.rs  parse_ansi_split_by_lines_as_spans_iterator.rs  playground_iterator.rs
src/parse_ansi_text/raw_ansi_parse/: enums.rs  output.rs  parsers.rs  parsers_only_text_and_graphics.rs  parsers_only_text_and_graphics_manual.rs  parsers_only_text_and_graphics_manual_simd.rs
src/parse_file/: file_to_lines_of_spans.rs  file_to_spans.rs  from_middle_of_file.rs  tests.rs  text_to_lines_of_spans.rs  text_to_spans.rs  types.rs
(+19 files in other folders)
