[package]
name = "ansi_parser_extended"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/rluvaton/ansi-parser"
readme = "README.md"
description = "Parse ansi text with support for styling and colors"
license = "MIT"


#[profile.release]
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-parser = "0.9.1"
demonstrate = "0.4.5"
bitflags = "2.5.0"
heapless = "0.8.0"
test-case = "3.3.1"
clap = { version = "4", features = ["derive"] }
pretty_assertions = "1.4.0"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
tempfile = "3.10.1"
get_chunk = "1.2.1"
nom = "7.1.3"
sonic-rs = "0.3.5"
atoi = "2.0.0"
const_typed_builder = "0.3.0"
genawaiter = "0.99.1"
peak_alloc = "0.2.1"
memchr = { version = "2", default-features = false }
itertools = "0.13.0"
