[package]
name = "run_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
ansi_parser_extended = { path = "../" }
nom = "7.1.3"

[profile.release]
debug = true

# cargo build --profile profiling
# samply record ./run_lib/target/profiling/run_lib
[profile.profiling]
inherits = "release"
debug = true
